--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3599,7 +3599,17 @@ body.scrolled .scroll-top-button {
 					font-size: 0.9em;
 				}
 
+		@media screen and (max-width: 736px) {
 
+			#nav {
+				display: none;
+			}
+
+				#nav + #main {
+					padding-top: 0;
+				}
+
+		}
 
 /* Footer */
 
