--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3602,7 +3602,7 @@ body.scrolled .scroll-top-button {
 		@media screen and (max-width: 736px) {
 
 			#nav {
-				display: none;
+				display: flex;
 			}
 
 				#nav + #main {
