--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3513,7 +3513,8 @@ body.scrolled .scroll-top-button {
 		}
 
 		#nav a:hover {
-			color: #003b9f;
+			color: #FFFFFF;
+			font-weight: 400;
 		}
 
 		#nav strong, #nav b {
@@ -3612,10 +3613,10 @@ nav a::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -5px;
+  bottom: -2px;
   width: 100%;
   height: 2px;
-  background: #3B9EFF;
+  background: #FFFFFF;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.3s ease;
