--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3843,7 +3843,7 @@ nav a:hover::after {
 
 /* siaconnect-access-section */
 .siaconnect-access-section {
-  background: #22243d;
+  background: #0a0a0a;
   padding: 100px 20px;
   text-align: center;
   position: relative;
