--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3352,7 +3352,7 @@ body.scrolled .scroll-top-button {
 /* Benefit Section */
 .benefit-section {
   position: relative;
-  background: #343865;
+  background: #22243d;
   color: white;
   text-align: center;
   padding: 160px 20px 100px;
@@ -3362,7 +3362,7 @@ body.scrolled .scroll-top-button {
 .benefit-container {
   max-width: 800px;
   margin: 0 auto;
-  animation: fadeInHero 1.8s ease;
+  animation: fadeInbenefit 1.8s ease;
 }
 
 .benefit-logo {
