--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3352,7 +3352,7 @@ body.scrolled .scroll-top-button {
 /* Benefit Section */
 .benefit-section {
   position: relative;
-  background: #22243d;
+  background: #2b2f55;
   color: white;
   text-align: center;
   padding: 160px 20px 100px;
@@ -3361,7 +3361,7 @@ body.scrolled .scroll-top-button {
 
 .benefit-container {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 20 auto;
   animation: fadeInbenefit 1.8s ease;
 }
 
@@ -3373,13 +3373,17 @@ body.scrolled .scroll-top-button {
 
 .benefit-section h1 {
   font-size: 3rem;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   font-weight: bold;
 }
 .benefit-section h2 {
   font-size: 2.5rem;
   margin-bottom: 20px;
   font-weight: bold;
+}
+.benefit-section h3 {
+  font-size: 2rem;
+  margin-bottom: 20px;
 }
 .benefit-section p {
   font-size: 1.2rem;
