--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3355,7 +3355,7 @@ body.scrolled .scroll-top-button {
   background: #2b2f55;
   color: white;
   text-align: center;
-  padding: 160px 20px 100px;
+  padding: 100px 20px;
   overflow: hidden;
 }
 
@@ -3374,12 +3374,10 @@ body.scrolled .scroll-top-button {
 .benefit-section h1 {
   font-size: 3rem;
   margin-bottom: 40px;
-  font-weight: bold;
 }
 .benefit-section h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 20px;
-  font-weight: bold;
 }
 .benefit-section h3 {
   font-size: 2rem;
