--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3386,7 +3386,7 @@ body.scrolled .scroll-top-button {
   margin-bottom: 20px;
 }
 .benefit-section p {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 		text-align: left;
   color: #cccccc;
   margin-bottom: 80px;
@@ -3419,7 +3419,8 @@ body.scrolled .scroll-top-button {
     font-size: 2.2rem;
   }
   .benefit-section p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+				margin-bottom: 5px;
   }
   .button {
     padding: 10px 20px;
