--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2893,10 +2893,9 @@ input, select, textarea {
 			
 /* Main Style 2 */
 		.main.style2 {
-			background-color: #0a0a0a;
+			background-color: #1a1d38;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("images/overlay1b.png"), url("../../images/header.jpg");
 			background-size: auto,							cover;
 		}
 
