--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3392,7 +3392,7 @@ text-align: center;
 .benefit-section p {
   font-size: 1.5rem;
 text-align: left;
-  color: #cccccc;
+  color: #ffffff;
   margin-bottom: 40px;
 }
 
@@ -3409,7 +3409,7 @@ text-align: left;
   }
   .benefit-section p {
     font-size: 1.5rem;
-				margin-bottom: 5px;
+margin-bottom: 5px;
   }
   
 		
