--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3912,34 +3912,42 @@ nav a:hover::after {
 
 /* siaconnect-access-section */
 .siaconnect-access-section {
-  background: #343865;
-  padding: 100px 20px;
-  text-align: center;
   position: relative;
+  background: #343865;
+padding: 100px 20px;
+  text-align: left;
   overflow: hidden;
 }
-
+.siaconnect-access-container {
+  max-width: 800px;
+  margin: 0 auto;
+  animation: fadeInsiaconnect-access 1.8s ease;
+}
 .siaconnect-access-section h1 {
   font-size: 3em;
+text-align: center;
   color: #ffffff;
-  margin-bottom: 2px;
+  margin-bottom: 20px;
 }
 
 .siaconnect-access-section h2 {
-  font-size: 2.5em;
-  color: #ffffff;
-  margin-bottom: 30px;
+  font-size: 2.5rem;
+text-align: center;
+color: #ffffff;
+  margin-bottom: 20px;
 }
 .siaconnect-access-section h3 {
   font-size: 2em;
+text-align: center;
   color: #ffffff;
   margin-bottom: 30px;
 }
 
 .siaconnect-access-section p {
-  font-size: 1.2em;
-  color: #cccccc;
-  margin-bottom: 80px;
+  font-size: 1.5rem;
+text-align: left;
+  color: #ffffff;
+  margin-bottom: 40px;
 }
 
 /* SVG animation overlay */
