--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3918,11 +3918,6 @@ padding: 100px 20px;
   text-align: left;
   overflow: hidden;
 }
-.siaconnect-access-container {
-  max-width: 800px;
-  margin: 0 auto;
-  animation: fadeInsiaconnect-access 1.8s ease;
-}
 .siaconnect-access-section h1 {
   font-size: 3em;
 text-align: center;
@@ -3964,7 +3959,7 @@ text-align: left;
 .siaconnect-access-section .container {
 max-width: 100%;
   margin: 0 auto;
-  animation: fadeInFuture 1.8s ease;
+  animation: fadeInAccess 1.8s ease;
   position: relative;
   z-index: 1;
 }
@@ -3972,7 +3967,7 @@ max-width: 100%;
 .mockup-row {
   display: flex;
 		background: rgba(0, 0, 0, 0.8);
-		border-radius: 6px;
+		border-radius: 12px;
   align-items: flex-start; /* aligns tops */
   justify-content: center;
   gap: 40px;
@@ -3986,7 +3981,7 @@ max-width: 100%;
 }
 
 .mockup-column img {
-  max-height: 600px; /* or whatever looks good */
+  max-height: 600px; /
   width: auto;
   object-fit: contain;
   border-radius: 12px;
