--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,7 +97,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #666;
+		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -3380,12 +3380,14 @@ padding: 100px 20px;
   margin-bottom: 20px;
 }
 .benefit-section h2 {
-  font-size: 2.5rem;
+color: #ffffff; 
+font-size: 2.5rem;
 text-align: center;
   margin-bottom: 20px;
 }
 .benefit-section h3 {
-  font-size: 2rem;
+color: #ffffff; 
+font-size: 2rem;
 text-align: center;
   margin-bottom: 20px;
 }
