--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4035,13 +4035,13 @@ max-width: 100%;
 .future-section h3 {
   font-size: 2em;
   color: #ffffff;
-  margin-bottom: 30px;
+  margin-bottom: 100px;
 }
 
 .future-section p {
   font-size: 1.2em;
-  color: #cccccc;
-  margin-bottom: 20px;
+  color: #ffffff;
+  margin-bottom: 80px;
 }
 
 .future-section .button.special {
