--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4033,7 +4033,7 @@ max-width: 100%;
   color: #ffffff;
 margin-bottom: 2px;
 }
-.future-section h3.glow {
+.h3-glow {
   font-size: 2em;
   color: #ffffff;
   margin-bottom: 100px;
