--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4501,6 +4501,7 @@ table.comparison-table th:last-child {
   0% { opacity: 0; transform: translateY(30px); }
   100% { opacity: 1; transform: translateY(0); }
 }
+}
 /* XLarge */
 
 	@media screen and (max-width: 1680px) {
