--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4129,7 +4129,7 @@ border-radius: 12px;
   width: auto;
 	margin-bottom: 30px;
 }
-
+}
 /* SIAConnect Future Section */
 .future-section {
   background: #000000;
