--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3473,8 +3473,8 @@ margin-bottom: 5px;
   }
   
 	
-/* Security Section */
-.security-section {
+/* Sec Section */
+.sec-section {
   background: #2b2f55;
   padding: 60px 20px;
   text-align: center;
@@ -3482,27 +3482,27 @@ margin-bottom: 5px;
   overflow: hidden;
 }
 
-.security-container {
+.sec-container {
   max-width: 800px;
   margin: 0 auto;
 }
 
-.security-section h1 {
+.sec-section h1 {
   font-size: 3em;
   color: #ffffff;
   margin-bottom: 20px;
 }
-.security-section h2 {
+.sec-section h2 {
   font-size: 2.5em;
   color: #ffffff;
   margin-bottom: 60px;
 }
-.security-section h3 {
+.sec-section h3 {
   font-size: 2em;
   color: #ffffff;
   margin-bottom: 30px;
 }
-.security-section p {
+.sec-section p {
   font-size: 1.2em;
   color: #cccccc;
   margin-bottom: 40px;
