--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,7 +120,7 @@ input, select, textarea {
 		}
 
 	strong, b {
-		color: #555;
+		color: #fff;
 		font-weight: 400;
 	}
 
@@ -159,7 +159,7 @@ input, select, textarea {
 	}
 
 	h4 {
-		font-size: 5em;
+		font-size: 1.5em;
 		line-height: 1.5em;
 	}
 
@@ -4288,6 +4288,45 @@ margin-bottom: 5px;
   
 		
 }
+
+/* Sec Section */
+.sec-section {
+  background: #22243d;
+  padding: 60px 20px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.sec-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.sec-section h1 {
+  font-size: 3em;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.sec-section h2 {
+color: #ffffff; 
+font-size: 2.5rem;
+text-align: center;
+  margin-bottom: 60px;
+}
+.sec-section h3 {
+color: #ffffff; 
+font-size: 2rem;
+text-align: center;
+  margin-bottom: 40px;
+}
+.sec-section p {
+  font-size: 1.5rem;
+text-align: left;
+  color: #ffffff;
+  margin-bottom: 40px;
+}
+
 /* Help Section */
 .help-section {
   position: relative;
