--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4291,7 +4291,7 @@ margin-bottom: 5px;
 
 /* Sec Section */
 .sec-section {
-  background: #22243d;
+  background: #2b2f55;
   padding: 60px 20px;
   text-align: center;
   position: relative;
