--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4161,9 +4161,10 @@ body.scrolled .scroll-top-button {
 /* Deployment */
 #deployment {
   background: #1b1e30;
-  color: #58a6ff;
   padding: 100px 20px;
-  text-align: left;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
 }
 
 #deployment h1 {
@@ -4174,14 +4175,17 @@ body.scrolled .scroll-top-button {
 }
 
 #deployment h2 {
+  text-align: center;
   font-size: 2.5rem;
   margin-top: 40px;
+  margin-bottom: 2px;
   color: #ffffff;
 }
 
 #deployment p {
-  font-size: 1.5rem;
-  line-height: 1.6;
+color: font-size: 1.2em;
+font-size: 1.2em;
+margin-bottom: 10px;
 }
 
 /* Roadmap Timeline */
@@ -4291,7 +4295,7 @@ margin-bottom: 5px;
 
 /* Whats Next Section */
 .whatnext-section {
-  background: #343865
+  background: #343865;
   padding: 60px 20px;
   text-align: center;
   position: relative;
@@ -4308,12 +4312,14 @@ margin-bottom: 5px;
   color: #ffffff;
   margin-bottom: 20px;
 }
+
 .whatnext h2 {
 color: #ffffff; 
 font-size: 2.5rem;
 text-align: center;
-  margin-bottom: 2px;
+margin-bottom: 2px;
 }
+
 .whatnext h3 {
 color: #ffffff; 
 font-size: 2rem;
